--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="piano_style.css">
-        <title>Piano Keyboard</title>
+        <title>Piano Keyboard - By Nabil</title>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="http://www.verovio.org/javascript/latest/verovio-toolkit-light.js" type="text/javascript" ></script>
